--- a/matrix-default.html
+++ b/matrix-default.html
@@ -93,31 +93,357 @@
               </div>
             </div>
             <div class="col-6">
-              <select
-                name=""
-                id=""
-                class="form-select border border-dark rounded px-3"
-              >
-                <option value="">Filter</option>
-              </select>
+              <div class="btn-group dropup w-100">
+                <button
+                  class="
+                    form-control
+                    border border-dark
+                    rounded
+                    px-3
+                    text-start text-secondary
+                  "
+                  type="button"
+                  id="dropdownMenuClickableInside"
+                  data-bs-toggle="dropdown"
+                  data-bs-auto-close="outside"
+                  aria-expanded="false"
+                >
+                  Filter
+                </button>
+                <div
+                  class="
+                    dropdown-menu
+                    filter-dropdown-menu
+                    shadow-lg
+                    rounded
+                    overflow-hidden
+                  "
+                  aria-labelledby="dropdownMenuButton1"
+                >
+                  <div class="container-fluid py-4">
+                    <div class="row g-4">
+                      <div class="col-md-6">
+                        <div>
+                          <table
+                            class="table table-bordered"
+                            style="table-layout: fixed"
+                          >
+                            <thead>
+                              <tr style="border-top: none;">
+                                <th class="py-0 border-0">
+                                  <h5 class="fs-28 fw-normal mt-4 mb-3">
+                                    Beds
+                                  </h5>
+                                </th>
+                                <th class="py-0 border-0">
+                                  <h5 class="fs-28 fw-normal mt-4 mb-3">
+                                    Price
+                                  </h5>
+                                </th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td>
+                                  <div class="form-check">
+                                    <input
+                                      class="form-check-input"
+                                      type="checkbox"
+                                      id="formCheck1"
+                                      value=""
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="formCheck1"
+                                    >
+                                      1 Bed 1 Bath 1 Cars
+                                    </label>
+                                  </div>
+                                </td>
+                                <td>
+                                  <div class="form-check">
+                                    <input
+                                      class="form-check-input"
+                                      type="checkbox"
+                                      id="formCheck1"
+                                      value=""
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="formCheck1"
+                                    >
+                                      300K - 500K
+                                    </label>
+                                  </div>
+                                </td>
+                              </tr>
+
+                              <tr>
+                                <td>
+                                  <div class="form-check">
+                                    <input
+                                      class="form-check-input"
+                                      type="checkbox"
+                                      id="formCheck1"
+                                      value=""
+                                      checked
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="formCheck1"
+                                    >
+                                      2 Bed 1 Bath 1 Cars
+                                    </label>
+                                  </div>
+                                </td>
+                                <td>
+                                  <div class="form-check">
+                                    <input
+                                      class="form-check-input"
+                                      type="checkbox"
+                                      id="formCheck1"
+                                      value=""
+                                      checked
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="formCheck1"
+                                    >
+                                      501K - 800K
+                                    </label>
+                                  </div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class="form-check">
+                                    <input
+                                      class="form-check-input"
+                                      type="checkbox"
+                                      id="formCheck1"
+                                      value=""
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="formCheck1"
+                                    >
+                                      2 Bed 2 Bath 1 Cars
+                                    </label>
+                                  </div>
+                                </td>
+                                <td>
+                                  <div class="form-check">
+                                    <input
+                                      class="form-check-input"
+                                      type="checkbox"
+                                      id="formCheck1"
+                                      value=""
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="formCheck1"
+                                    >
+                                      300K - 500K
+                                    </label>
+                                  </div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class="form-check">
+                                    <input
+                                      class="form-check-input"
+                                      type="checkbox"
+                                      id="formCheck1"
+                                      value=""
+                                      readonly
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="formCheck1"
+                                    >
+                                      1 Bed 1 Bath 1 Cars
+                                    </label>
+                                  </div>
+                                </td>
+                                <td>
+                                  <div class="form-check">
+                                    <input
+                                      class="form-check-input"
+                                      type="checkbox"
+                                      id="formCheck1"
+                                      value=""
+                                      readonly
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="formCheck1"
+                                    >
+                                      300K - 500K
+                                    </label>
+                                  </div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class="form-check">
+                                    <input
+                                      class="form-check-input"
+                                      type="checkbox"
+                                      id="formCheck1"
+                                      value=""
+                                      readonly
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="formCheck1"
+                                    >
+                                      1 Bed 1 Bath 1 Cars
+                                    </label>
+                                  </div>
+                                </td>
+                                <td>
+                                  <div class="form-check">
+                                    <input
+                                      class="form-check-input"
+                                      type="checkbox"
+                                      id="formCheck1"
+                                      value=""
+                                      readonly
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="formCheck1"
+                                    >
+                                      300K - 500K
+                                    </label>
+                                  </div>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                      <div class="col-md-2">
+                        <div class="row g-4">
+                          <div class="col-12">
+                            <h5 class="fs-28 fw-normal mt-4 mb-3">Aspect</h5>
+                            <div class="form-check">
+                              <input
+                                class="form-check-input"
+                                type="checkbox"
+                                id="formCheck1"
+                                value=""
+                              />
+                            </div>
+                          </div>
+                          <div class="col-12">
+                            <h5 class="fs-28 fw-normal mt-4 mb-3">Status</h5>
+                            <div class="row g-4">
+                              <div class="col-12">
+                                <div class="form-check">
+                                  <input
+                                    class="
+                                      form-check-input
+                                      bg-white
+                                      border-secondary
+                                    "
+                                    type="checkbox"
+                                    readonly
+                                  />
+                                  <label class="form-check-label">
+                                    Available
+                                  </label>
+                                </div>
+                              </div>
+                              <div class="col-12">
+                                <div class="form-check">
+                                  <input
+                                    class="
+                                      form-check-input
+                                      bg-warning
+                                      border-secondary
+                                    "
+                                    type="checkbox"
+                                    readonly
+                                  />
+                                  <label class="form-check-label">
+                                    501K - 800Held
+                                  </label>
+                                </div>
+                              </div>
+                              <div class="col-12">
+                                <div class="form-check">
+                                  <input
+                                    class="form-check-input border-secondary"
+                                    type="checkbox"
+                                    style="background-color: #a9c2b6"
+                                    readonly
+                                  />
+                                  <label class="form-check-label">
+                                    Has Deposit
+                                  </label>
+                                </div>
+                              </div>
+                              <div class="col-12">
+                                <div class="form-check">
+                                  <input
+                                    class="form-check-input border-secondary"
+                                    type="checkbox"
+                                    style="background-color: #c4d69d"
+                                    readonly
+                                  />
+                                  <label class="form-check-label">
+                                    Unconditional
+                                  </label>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <h5 class="fs-28 fw-normal mt-4 mb-3">Agent</h5>
+                        <form action="">
+                          <div class="row">
+                            <div class="col-12">
+                              <input
+                                type="text"
+                                class="form-control form-control2 rounded-0"
+                                placeholder="Search Agent"
+                              />
+                            </div>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <hr>
+        <hr />
         <div class="my-5">
-            <div class="text-center">
-              <img src="./assets/images/icons/import-file-icon.png" class="mb-4" width="48" height="48" alt="">
-              <h5 class="fs-25 mb-2 opacity-50">No Properties available</h5>
-              <p class="mb-3 opacity-50">
-                Your project doesn’t have any properties yet.
-                <br>
-                Import the file today.
-              </p>
-              <button class="btn btn-lg btn-primary">
-                <span class="material-icons">upload</span>
-                Import File
-              </button>
-            </div>
+          <div class="text-center">
+            <img
+              src="./assets/images/icons/import-file-icon.png"
+              class="mb-4"
+              width="48"
+              height="48"
+              alt=""
+            />
+            <h5 class="fs-25 mb-2 opacity-50">No Properties available</h5>
+            <p class="mb-3 opacity-50">
+              Your project doesn’t have any properties yet.
+              <br />
+              Import the file today.
+            </p>
+            <button class="btn btn-lg btn-primary">
+              <span class="material-icons">upload</span>
+              Import File
+            </button>
+          </div>
         </div>
       </div>
     </main>
