--- a/properties-1.html
+++ b/properties-1.html
@@ -98,13 +98,14 @@
             <select
               name=""
               id=""
-              class="form-select border border-dark rounded px-3" style="width: 125px;"
+              class="form-select border border-dark rounded px-3"
+              style="width: 125px"
             >
               <option value="">Filter</option>
             </select>
           </div>
         </div>
-        <hr>
+        <hr />
         <div class="table-responsive">
           <table class="table text-nowrap custom-table">
             <thead class="text-uppercase">
@@ -139,9 +140,43 @@
                 <td>Available</td>
                 <td></td>
                 <td>
-                  <button class="btn py-0">
-                    <span class="material-icons">edit_note</span>
-                  </button>
+                  <div class="dropdown">
+                    <button
+                      class="btn py-0"
+                      type="button"
+                      id="dropdownMenuButton1"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                    >
+                      <span class="material-icons">edit_note</span>
+                    </button>
+                    <ul
+                      class="dropdown-menu"
+                      aria-labelledby="dropdownMenuButton1"
+                    >
+                      <li>
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#editRow"
+                        >
+                          Edit
+                        </button>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#deleteRow"
+                        >
+                          Delete
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
                 </td>
               </tr>
               <tr>
@@ -158,9 +193,43 @@
                 <td>Available</td>
                 <td></td>
                 <td>
-                  <button class="btn py-0">
-                    <span class="material-icons">edit_note</span>
-                  </button>
+                  <div class="dropdown">
+                    <button
+                      class="btn py-0"
+                      type="button"
+                      id="dropdownMenuButton1"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                    >
+                      <span class="material-icons">edit_note</span>
+                    </button>
+                    <ul
+                      class="dropdown-menu"
+                      aria-labelledby="dropdownMenuButton1"
+                    >
+                      <li>
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#editRow"
+                        >
+                          Edit
+                        </button>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#deleteRow"
+                        >
+                          Delete
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
                 </td>
               </tr>
             </tbody>
@@ -170,6 +239,261 @@
     </main>
 
     <footer></footer>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="deleteRow"
+      tabindex="-1"
+      aria-labelledby="deleteRowLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-body text-center">
+            <h1 class="opacity-25">
+              <span class="material-icons">delete_outline</span>
+            </h1>
+            <p class="fs-15 fw-medium mb-2">Deleting Row</p>
+            <p class="fs-12 opacity-75">
+              Are you sure you want to delete this row? Once deleted, it cannot
+              be recovered.
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-primary flex-fill me-3"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary flex-fill">
+              Yes! Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="editRow"
+      tabindex="-1"
+      aria-labelledby="editRowLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title fs-28" id="editRowLabel">Properties</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form action="">
+
+              <div class="table-responsive">
+                <table class="table table-bordered">
+                  <thead>
+                    <tr class="text-uppercase" style="border-top: none;">
+                      <th class="border-0">ID</th>
+                      <th class="border-0">PRICE</th>
+                      <th class="border-0">BEDS</th>
+                      <th class="border-0">BATHS</th>
+                      <th class="border-0">CARS</th>
+                      <th class="border-0 text-nowrap">CAR LOTS</th>
+                      <th class="border-0 text-nowrap">Storage Lots</th>
+                      <th class="border-0">Level</th>
+                      <th class="border-0">Aspect</th>
+                      <th class="border-0 text-nowrap">Total Area</th>
+                      <th class="border-0">Status</th>
+                      <th class="border-0">Agents</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th>1.1</th>
+                      <td>
+                        <input type="text" class="border-0 py-0 form-control" placeholder="$1,490,000">
+                      </td>
+                      <td>
+                        <input type="text" class="border-0 py-0 form-control" placeholder="3 BED">
+                      </td>
+                      <td>
+                        <input type="text" class="border-0 py-0 form-control" placeholder="2 BATH">
+                      </td>
+                      <td>
+                        <input type="text" class="border-0 py-0 form-control" placeholder="1">
+                      </td>
+                      <td>
+                        <input type="text" class="border-0 py-0 form-control" placeholder="1">
+                      </td>
+                      <td>
+                        <input type="text" class="border-0 py-0 form-control" placeholder="1">
+                      </td>
+                      <td>
+                        <input type="text" class="border-0 py-0 form-control" placeholder="1">
+                      </td>
+                      <td>
+                        <input type="text" class="border-0 py-0 form-control" placeholder="">
+                      </td>
+                      <td>
+                        <input type="text" class="border-0 py-0 form-control" placeholder="184m2">
+                      </td>
+                      <td>
+                        <select name="" id="" class="border-0 py-0 form-select">
+                          <option value="" selected disabled>Available</option>
+                        </select>
+                      </td>
+                      <td>
+                        <select name="" id="" class="border-0 py-0 form-select">
+                          <option value="" selected disabled>Available</option>
+                        </select>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <h5 class="mt-5 mb-4 fs-28" id="editRowLabel">
+                Additional Information
+              </h5>
+              <h5 class="fs-22 mb-2">Price</h5>
+              <div class="row g-4">
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Advertise as</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Match as</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+              </div>
+
+              <h5 class="fs-22 mt-4 mb-2">Key Features</h5>
+              <div class="row g-4">
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Internal Size</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Balcony Size</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Courtyard Size</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Study Space</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Car Lot</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Storage Lot</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Ceiling Height</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+              </div>
+
+              <h5 class="fs-22 mt-4 mb-2">Fees</h5>
+              <div class="row g-4">
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Council Rate</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Water Rate</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Stamp Duty</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Owners Corp</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Dutiable Value</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+              </div>
+
+              <h5 class="fs-22 mt-4 mb-2">Project Details</h5>
+              <div class="row g-4">
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Developer</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Developer</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Builder</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Builder</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Architect</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Architect</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Interior Designer</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Interior Designer</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Landscape Architect</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2">Landscape Architect</label>
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2"
+                    >Expected Construction</label
+                  >
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-lg-6">
+                  <label for="" class="form-label2"
+                    >Expected Construction</label
+                  >
+                  <input type="text" class="form-control form-control2" />
+                </div>
+                <div class="col-12 text-end">
+                  <button class="btn btn-primary btn-lg px-5 py-2">Save</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
