--- a/documents-fixtures.html
+++ b/documents-fixtures.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Documents - Brochure</title>
+    <title>Documents - Floor Plates</title>
 
     <link rel="stylesheet" href="./assets/css/bootstrap.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -94,7 +94,6 @@
             <div class="col-6">
               <button
                 class="btn btn-primary d-block w-100"
-                type="button"
                 data-bs-toggle="modal"
                 data-bs-target="#fileUpload"
               >
@@ -122,12 +121,42 @@
                     class="d-inline-block me-3"
                     alt="Image"
                   />
-                  George Street Residences - Brochure.pdf
+                  Fixtures & Finishes 1.pdf
                 </td>
                 <td class="text-end">
-                  <button class="btn btn-lg opacity-50">
-                    <span class="material-icons"> more_vert </span>
-                  </button>
+                  <div class="dropdown">
+                    <button
+                      class="btn btn-lg opacity-50"
+                      type="button"
+                      id="dropdownMenuButton1"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                    >
+                      <span class="material-icons"> more_vert </span>
+                    </button>
+                    <ul
+                      class="dropdown-menu"
+                      aria-labelledby="dropdownMenuButton1"
+                    >
+                      <li><a class="dropdown-item" href="#">Download</a></li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li><button class="dropdown-item">Rename</button></li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#deleteThisRow"
+                        >
+                          Delete
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
                 </td>
               </tr>
               <tr>
@@ -139,7 +168,7 @@
                     class="d-inline-block me-3"
                     alt="Image"
                   />
-                  George Street Residences - Brochure 2.pdf
+                  Fixtures & Finishes 2.pdf
                 </td>
                 <td class="text-end">
                   <button class="btn btn-lg opacity-50">
@@ -179,6 +208,42 @@
                 </div>
               </div>
             </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="deleteThisRow"
+      tabindex="-1"
+      aria-labelledby="deleteThisRowLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-body text-center">
+            <h1 class="opacity-25">
+              <span class="material-icons">delete_outline</span>
+            </h1>
+            <p class="fs-15 fw-medium mb-2">Deleting File</p>
+            <p class="fs-12 opacity-75">
+              Are you sure you want to delete this file? Once deleted, it cannot
+              be recovered.
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-primary flex-fill me-3"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary flex-fill">
+              Yes! Delete
+            </button>
           </div>
         </div>
       </div>
