--- a/documents-images.html
+++ b/documents-images.html
@@ -92,11 +92,17 @@
               </div>
             </div>
             <div class="col-6">
-              <button class="btn btn-primary d-block w-100">Add Now</button>
+              <button
+                class="btn btn-primary d-block w-100"
+                data-bs-toggle="modal"
+                data-bs-target="#fileUpload"
+              >
+                Add Now
+              </button>
             </div>
           </div>
         </div>
-        <hr>
+        <hr />
         <div class="table-responsive">
           <table class="table">
             <thead class="text-uppercase">
@@ -118,9 +124,50 @@
                   George Street - Hero.jpg
                 </td>
                 <td class="text-end">
-                  <button class="btn btn-lg opacity-50">
-                    <span class="material-icons"> more_vert </span>
-                  </button>
+                  <div class="btn-group">
+                    <button
+                      class="btn btn-lg opacity-50"
+                      type="button"
+                      id="dropdownMenuClickableInside"
+                      data-bs-toggle="dropdown"
+                      data-bs-auto-close="outside"
+                      aria-expanded="false"
+                    >
+                      <span class="material-icons"> more_vert </span>
+                    </button>
+                    <ul
+                      class="dropdown-menu"
+                      aria-labelledby="dropdownMenuClickableInside"
+                    >
+                      <li><a class="dropdown-item" href="#">Download</a></li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li>
+                        <a class="dropdown-item">
+                          <div class="form-check ps-0 pe-4">
+                            <label class="form-check-label" for="invalidCheck">
+                              Set as Thumbnail
+                            </label>
+                            <input
+                              class="form-check-input float-end ms-auto"
+                              style="margin-right: -1.5rem;"
+                              type="checkbox"
+                              value=""
+                              id="invalidCheck"
+                              required
+                            />
+                          </div>
+                        </a>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li>
+                        <button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#deleteThisRow">Delete</button>
+                      </li>
+                    </ul>
+                  </div>
                 </td>
               </tr>
               <tr>
@@ -181,6 +228,71 @@
     </main>
 
     <footer></footer>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="fileUpload"
+      tabindex="-1"
+      aria-labelledby="fileUploadLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body">
+            <form action="">
+              <div class="row g-4">
+                <div class="col-12">
+                  <div class="drag-area text-center">
+                    <img src="./assets/images/icons/dragdropimg.png" alt="" />
+                    <h5 class="fs-20 mt-4">Drag & Drop</h5>
+                    <p class="text-secondary">Uplaod file in PDF format</p>
+                    <button class="btn btn-primary px-4">Upload File</button>
+                    <input type="file" hidden />
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="deleteThisRow"
+      tabindex="-1"
+      aria-labelledby="deleteThisRowLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-body text-center">
+            <h1 class="opacity-25">
+              <span class="material-icons">delete_outline</span>
+            </h1>
+            <p class="fs-15 fw-medium mb-2">Deleting File</p>
+            <p class="fs-12 opacity-75">
+              Are you sure you want to delete this file? Once deleted, it cannot
+              be recovered.
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-primary flex-fill me-3"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary flex-fill">
+              Yes! Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
