--- a/password-instructions.html
+++ b/password-instructions.html
@@ -47,6 +47,25 @@
         left: 0;
         width: 100%;
       }
+
+      @media screen and (max-width: 1366px) {
+        .form-container {
+          top: 210px;
+          height: 402px;
+        }
+
+        .welcome-text{
+          top: 15%;
+        }
+      }
+
+      @media screen and (max-width: 996.67px){
+        .form-container{
+          height: 422px;
+          padding-left: 1rem;
+          padding-right: 1rem;
+        }
+      }
     </style>
   </head>
   <body class="100-vh">
@@ -68,7 +87,7 @@
       <div class="form-container px-lg-5">
         <img src="./assets/images/email-1.svg" class="mb-3" alt="">
         <h3 class="mb-3 fs-25 fw-semibold">Instructions Sent Sucessfully</h3>
-        <p class="mb-5 text-center text-nowrap">
+        <p class="mb-5 text-center">
           Please check your mail for instructions to reset your password.
         </p>
         <form action="" class="w-100" style="max-width: 100%;">
@@ -81,7 +100,5 @@
         </form>
       </div>
     </div>
-
-    <footer></footer>
   </body>
 </html>
