--- a/agents.html
+++ b/agents.html
@@ -16,12 +16,218 @@
     />
   </head>
   <body>
-    <header></header>
+    <header>
+      <a href="./index.html" class="brand-icon">
+        <img src="../assets/images/logo.svg" alt="" />
+      </a>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="toggle-menu">
+          <button class="btn fs-28 p-0" id="show-sidebar-btn">
+            <span class="material-icons">menu</span>
+          </button>
+          <a href="./index.html" class="toggle-brand-icon">
+            <img
+              src="./assets/images/logo.svg"
+              width="220px"
+              class="img-fluid"
+              alt=""
+            />
+          </a>
+        </div>
+        <nav class="main-nav">
+          <ul class="ps-0 mb-0 list-unstyled">
+            <li class="active">
+              <a href="">
+                <span class="material-icons navbar-icon">people_alt</span>
+                <span class="navbar-label">Agents</span>
+              </a>
+            </li>
+            <li class="">
+              <a href="">
+                <span class="material-icons navbar-icon">dashboard</span>
+                <span class="navbar-label">Dashboard</span>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <span class="material-icons navbar-icon">work</span>
+                <span class="navbar-label">Projects</span></a
+              >
+            </li>
+            <li>
+              <div class="btn-group">
+                <button
+                  class="btn fs-25 p-0 text-secondary"
+                  type="button"
+                  id="manualClose"
+                  data-bs-toggle="dropdown"
+                  data-bs-auto-close="false"
+                  aria-expanded="false"
+                >
+                  <span class="material-icons">notifications</span>
+                </button>
+                <div
+                  class="dropdown-menu notifications-container"
+                  aria-labelledby="manualClose"
+                >
+                  <div
+                    class="d-flex align-items-center justify-content-between"
+                  >
+                    <p class="mb-0 fs-15">Notifications</p>
+                    <button class="btn text-info fs-10">
+                      Mark all as read
+                    </button>
+                  </div>
+                  <hr />
+                  <ul class="list-unstyled">
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <div class="dropdown-divider"></div>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <div class="dropdown-divider"></div>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="dropdown">
+                <button
+                  class="btn fs-25 p-0 text-secondary"
+                  type="button"
+                  id="dropdownMenuButton1"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <span class="material-icons">account_box</span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">My Profile</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
     <main>
-      <aside></aside>
+      <aside>
+        <div
+          class="
+            d-xl-none d-flex
+            align-items-center
+            justify-content-between
+            py-1
+            border-bottom
+          "
+        >
+          <h5 class="fs-28 text-primary">Menu</h5>
+          <button class="btn fs-28 p-0 text-primary" id="hide-sidebar-btn">
+            <span class="material-icons">arrow_back</span>
+          </button>
+        </div>
+        <ul class="list-unstyled mb-0 ps-0 sidebar-items">
+          <li class="active">
+            <div class="dropdown active">
+              <button class="sidebar-item">
+                <span class="material-icons">people_outline</span>
+                Members List
+              </button>
+              <ul class="list-unstyled ps-0 mb-0 sidebar-dropdown-list">
+                <li class="active">
+                  <a href="">Active</a>
+                </li>
+                <li>
+                  <a href="">Inactive</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </aside>
       <div class="content">
-        <div class="d-flex align-items-center justify-content-between">
+        <div class="d-flex align-items-center justify-content-between flex-wrap">
           <h1 class="mainUserText">Agents</h1>
           <div class="row g-3">
             <div class="col-6">
@@ -74,12 +280,8 @@
                   />
                   Alan Scott
                 </td>
-                <td>
-                  green@lantern.com
-                </td>
-                <td>
-                  +61 000 000 00
-                </td>
+                <td>green@lantern.com</td>
+                <td>+61 000 000 00</td>
                 <td class="text-end">
                   <div class="dropdown">
                     <button
@@ -96,15 +298,21 @@
                       aria-labelledby="dropdownMenuButton1"
                     >
                       <li>
-                        <a class="dropdown-item" href="#">Manage</a>
+                        <a class="dropdown-item" href="./project-access.html"
+                          >Manage</a
+                        >
                       </li>
                       <li>
                         <div class="dropdown-divider"></div>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="#"
-                          >Delete</a
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#deleteThisRow"
                         >
+                          Delete
+                        </button>
                       </li>
                     </ul>
                   </div>
@@ -121,12 +329,8 @@
                   />
                   Alan Scott
                 </td>
-                <td>
-                  green@lantern.com
-                </td>
-                <td>
-                  +61 000 000 00
-                </td>
+                <td>green@lantern.com</td>
+                <td>+61 000 000 00</td>
                 <td class="text-end">
                   <div class="dropdown">
                     <button
@@ -143,15 +347,21 @@
                       aria-labelledby="dropdownMenuButton1"
                     >
                       <li>
-                        <a class="dropdown-item" href="#">Manage</a>
+                        <a class="dropdown-item" href="./project-access.html"
+                          >Manage</a
+                        >
                       </li>
                       <li>
                         <div class="dropdown-divider"></div>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="#"
-                          >Delete</a
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#deleteThisRow"
                         >
+                          Delete
+                        </button>
                       </li>
                     </ul>
                   </div>
@@ -168,12 +378,8 @@
                   />
                   Alan Scott
                 </td>
-                <td>
-                  green@lantern.com
-                </td>
-                <td>
-                  +61 000 000 00
-                </td>
+                <td>green@lantern.com</td>
+                <td>+61 000 000 00</td>
                 <td class="text-end">
                   <div class="dropdown">
                     <button
@@ -190,15 +396,21 @@
                       aria-labelledby="dropdownMenuButton1"
                     >
                       <li>
-                        <a class="dropdown-item" href="#">Manage</a>
+                        <a class="dropdown-item" href="./project-access.html"
+                          >Manage</a
+                        >
                       </li>
                       <li>
                         <div class="dropdown-divider"></div>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="#"
-                          >Delete</a
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#deleteThisRow"
                         >
+                          Delete
+                        </button>
                       </li>
                     </ul>
                   </div>
@@ -267,6 +479,42 @@
             </button>
             <button type="button" class="btn btn-lg btn-primary px-md-5">
               Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="deleteThisRow"
+      tabindex="-1"
+      aria-labelledby="deleteThisRowLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-body text-center">
+            <h1 class="opacity-25">
+              <span class="material-icons">delete_outline</span>
+            </h1>
+            <p class="fs-15 fw-medium mb-2">Deleting File</p>
+            <p class="fs-12 opacity-75">
+              Are you sure you want to delete this file? Once deleted, it cannot
+              be recovered.
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-primary flex-fill me-3"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary flex-fill">
+              Yes! Delete
             </button>
           </div>
         </div>
