--- a/dashboard-1.html
+++ b/dashboard-1.html
@@ -56,35 +56,155 @@
   </head>
   <body>
     <header>
+      <a href="./index.html" class="brand-icon">
+        <img src="../assets/images/logo.svg" alt="" />
+      </a>
       <div class="d-flex justify-content-between align-items-center">
-        <img
-          src="./assets/images/logo.png"
-          width="220px"
-          class="img-fluid"
-          alt=""
-        />
+        <div class="toggle-menu">
+          <button class="btn fs-28 p-0" id="show-sidebar-btn">
+            <span class="material-icons">menu</span>
+          </button>
+          <a href="./index.html" class="toggle-brand-icon">
+            <img
+              src="./assets/images/logo.svg"
+              width="220px"
+              class="img-fluid"
+              alt=""
+            />
+          </a>
+        </div>
         <nav class="main-nav">
           <ul class="ps-0 mb-0 list-unstyled">
             <li>
-              <a href="" class="btn btn-primary">Dashboard</a>
+              <a href="">
+                <span class="material-icons navbar-icon">people_alt</span>
+                <span class="navbar-label">Agents</span>
+              </a>
+            </li>
+            <li class="active">
+              <a href="">
+                <span class="material-icons navbar-icon">dashboard</span>
+                <span class="navbar-label">Dashboard</span>
+              </a>
+            </li>
+            <li class="">
+              <a href="">
+                <span class="material-icons navbar-icon">work</span>
+                <span class="navbar-label">Projects</span></a
+              >
             </li>
             <li>
-              <a href="">Projects</a>
-            </li>
-            <li>
-              <div class="dropdown">
+              <div class="btn-group">
                 <button
                   class="btn fs-25 p-0 text-secondary"
                   type="button"
-                  id="dropdownMenuButton1"
+                  id="manualClose"
                   data-bs-toggle="dropdown"
+                  data-bs-auto-close="false"
                   aria-expanded="false"
                 >
                   <span class="material-icons">notifications</span>
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                </ul>
+                <div
+                  class="dropdown-menu notifications-container"
+                  aria-labelledby="manualClose"
+                >
+                  <div
+                    class="d-flex align-items-center justify-content-between"
+                  >
+                    <p class="mb-0 fs-15">Notifications</p>
+                    <button class="btn text-info fs-10">
+                      Mark all as read
+                    </button>
+                  </div>
+                  <hr />
+                  <ul class="list-unstyled">
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <div class="dropdown-divider"></div>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <div class="dropdown-divider"></div>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li>
@@ -130,7 +250,7 @@
           <li class="active">
             <div class="dropdown active">
               <button class="sidebar-item">
-                <span class="material-icons material-icons-outlined">dashboard</span>
+                <span class="material-icons">dashboard</span>
                 Dashboard
               </button>
               <ul class="list-unstyled ps-0 mb-0 sidebar-dropdown-list">
@@ -151,7 +271,7 @@
         <hr class="my-0" />
         <h5 class="fs-28 my-4">Overview</h5>
         <div class="row align-items-stretch g-3">
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <div class="row g-3">
               <div class="col-md-6">
                 <div
@@ -209,7 +329,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-8">
+          <div class="col-lg-8 order-lg-0 order-1">
             <div class="border border-1 py-4 px-5 h-100">
               <h6 class="fs-18 fw-semibold">Projects</h6>
               <div
@@ -219,7 +339,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12">
+          <div class="col-12 order-lg-1 order-0">
             <div
               class="rounded border border-1 p-4"
               style="background-color: #69d2e7"
