--- a/documents-images.html
+++ b/documents-images.html
@@ -16,10 +16,249 @@
     />
   </head>
   <body>
-    <header></header>
+    <header>
+      <a href="./index.html" class="brand-icon">
+        <img src="../assets/images/logo.svg" alt="" />
+      </a>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="toggle-menu">
+          <button class="btn fs-28 p-0" id="show-sidebar-btn">
+            <span class="material-icons">menu</span>
+          </button>
+          <a href="./index.html" class="toggle-brand-icon">
+            <img
+              src="./assets/images/logo.svg"
+              width="220px"
+              class="img-fluid"
+              alt=""
+            />
+          </a>
+        </div>
+        <nav class="main-nav">
+          <ul class="ps-0 mb-0 list-unstyled">
+            <li>
+              <a href="">
+                <span class="material-icons navbar-icon">people_alt</span>
+                <span class="navbar-label">Agents</span>
+              </a>
+            </li>
+            <li class="">
+              <a href="">
+                <span class="material-icons navbar-icon">dashboard</span>
+                <span class="navbar-label">Dashboard</span>
+              </a>
+            </li>
+            <li class="active">
+              <a href="">
+                <span class="material-icons navbar-icon">work</span>
+                <span class="navbar-label">Projects</span></a
+              >
+            </li>
+            <li>
+              <div class="btn-group">
+                <button
+                  class="btn fs-25 p-0 text-secondary"
+                  type="button"
+                  id="manualClose"
+                  data-bs-toggle="dropdown"
+                  data-bs-auto-close="false"
+                  aria-expanded="false"
+                >
+                  <span class="material-icons">notifications</span>
+                </button>
+                <div
+                  class="dropdown-menu notifications-container"
+                  aria-labelledby="manualClose"
+                >
+                  <div
+                    class="d-flex align-items-center justify-content-between"
+                  >
+                    <p class="mb-0 fs-15">Notifications</p>
+                    <button class="btn text-info fs-10">
+                      Mark all as read
+                    </button>
+                  </div>
+                  <hr />
+                  <ul class="list-unstyled">
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <div class="dropdown-divider"></div>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <div class="dropdown-divider"></div>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="dropdown">
+                <button
+                  class="btn fs-25 p-0 text-secondary"
+                  type="button"
+                  id="dropdownMenuButton1"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <span class="material-icons">account_box</span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">My Profile</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
     <main>
-      <aside></aside>
+      <aside>
+        <div
+          class="
+            d-xl-none d-flex
+            align-items-center
+            justify-content-between
+            py-1
+            border-bottom
+          "
+        >
+          <h5 class="fs-28 text-primary">Menu</h5>
+          <button class="btn fs-28 p-0 text-primary" id="hide-sidebar-btn">
+            <span class="material-icons">arrow_back</span>
+          </button>
+        </div>
+        <ul class="list-unstyled mb-0 ps-0 sidebar-items">
+          <li>
+            <a href="" class="sidebar-item">
+              <span class="material-icons">widgets</span>
+              Matrix
+            </a>
+          </li>
+          <li>
+            <a href="" class="sidebar-item">
+              <span class="material-icons">holiday_village</span>
+              Properties
+            </a>
+          </li>
+          <li class="active">
+            <div class="dropdown active">
+              <button class="sidebar-item">
+                <span class="material-icons">description</span>
+                Documents
+              </button>
+              <ul class="list-unstyled ps-0 mb-0 sidebar-dropdown-list">
+                <li class="">
+                  <a href="">Floor Plans</a>
+                </li>
+                <li>
+                  <a href="">Brochure</a>
+                </li>
+                <li>
+                  <a href="">FloorPlates</a>
+                </li>
+                <li class="active">
+                  <a href="">Images</a>
+                </li>
+                <li>
+                  <a href="">Fixtures & Finishes</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="" class="sidebar-item">
+              <span class="material-icons">video_library</span>
+              Videos
+            </a>
+          </li>
+          <li>
+            <a href="" class="sidebar-item">
+              <span class="material-icons">place</span>
+              Map
+            </a>
+          </li>
+        </ul>
+      </aside>
       <div class="content">
         <h1 class="mainUserText">George Street</h1>
         <p class="fs-20 mb-3">363 George Street, Fitzroy VIC</p>
@@ -71,7 +310,9 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div class="d-flex align-items-center justify-content-between">
+        <div
+          class="d-flex align-items-center justify-content-between flex-wrap"
+        >
           <h5 class="fs-28 fw-normal mt-4 mb-3">
             Documents, Images & Floor plans
           </h5>
@@ -141,7 +382,7 @@
                     >
                       <li><a class="dropdown-item" href="#">Download</a></li>
                       <li>
-                        <hr class="dropdown-divider">
+                        <hr class="dropdown-divider" />
                       </li>
                       <li>
                         <a class="dropdown-item">
@@ -151,7 +392,7 @@
                             </label>
                             <input
                               class="form-check-input float-end ms-auto"
-                              style="margin-right: -1.5rem;"
+                              style="margin-right: -1.5rem"
                               type="checkbox"
                               value=""
                               id="invalidCheck"
@@ -161,10 +402,16 @@
                         </a>
                       </li>
                       <li>
-                        <hr class="dropdown-divider">
+                        <hr class="dropdown-divider" />
                       </li>
                       <li>
-                        <button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#deleteThisRow">Delete</button>
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#deleteThisRow"
+                        >
+                          Delete
+                        </button>
                       </li>
                     </ul>
                   </div>
@@ -182,9 +429,56 @@
                   George Street - Living 1.jpg
                 </td>
                 <td class="text-end">
-                  <button class="btn btn-lg opacity-50">
-                    <span class="material-icons"> more_vert </span>
-                  </button>
+                  <div class="btn-group">
+                    <button
+                      class="btn btn-lg opacity-50"
+                      type="button"
+                      id="dropdownMenuClickableInside"
+                      data-bs-toggle="dropdown"
+                      data-bs-auto-close="outside"
+                      aria-expanded="false"
+                    >
+                      <span class="material-icons"> more_vert </span>
+                    </button>
+                    <ul
+                      class="dropdown-menu"
+                      aria-labelledby="dropdownMenuClickableInside"
+                    >
+                      <li><a class="dropdown-item" href="#">Download</a></li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item">
+                          <div class="form-check ps-0 pe-4">
+                            <label class="form-check-label" for="invalidCheck">
+                              Set as Thumbnail
+                            </label>
+                            <input
+                              class="form-check-input float-end ms-auto"
+                              style="margin-right: -1.5rem"
+                              type="checkbox"
+                              value=""
+                              id="invalidCheck"
+                              required
+                            />
+                          </div>
+                        </a>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#deleteThisRow"
+                        >
+                          Delete
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
                 </td>
               </tr>
               <tr>
@@ -199,9 +493,56 @@
                   George Street - Living 2.jpg
                 </td>
                 <td class="text-end">
-                  <button class="btn btn-lg opacity-50">
-                    <span class="material-icons"> more_vert </span>
-                  </button>
+                  <div class="btn-group">
+                    <button
+                      class="btn btn-lg opacity-50"
+                      type="button"
+                      id="dropdownMenuClickableInside"
+                      data-bs-toggle="dropdown"
+                      data-bs-auto-close="outside"
+                      aria-expanded="false"
+                    >
+                      <span class="material-icons"> more_vert </span>
+                    </button>
+                    <ul
+                      class="dropdown-menu"
+                      aria-labelledby="dropdownMenuClickableInside"
+                    >
+                      <li><a class="dropdown-item" href="#">Download</a></li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item">
+                          <div class="form-check ps-0 pe-4">
+                            <label class="form-check-label" for="invalidCheck">
+                              Set as Thumbnail
+                            </label>
+                            <input
+                              class="form-check-input float-end ms-auto"
+                              style="margin-right: -1.5rem"
+                              type="checkbox"
+                              value=""
+                              id="invalidCheck"
+                              required
+                            />
+                          </div>
+                        </a>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#deleteThisRow"
+                        >
+                          Delete
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
                 </td>
               </tr>
               <tr>
@@ -216,9 +557,56 @@
                   George Street - Kitchen.jpg
                 </td>
                 <td class="text-end">
-                  <button class="btn btn-lg opacity-50">
-                    <span class="material-icons"> more_vert </span>
-                  </button>
+                  <div class="btn-group">
+                    <button
+                      class="btn btn-lg opacity-50"
+                      type="button"
+                      id="dropdownMenuClickableInside"
+                      data-bs-toggle="dropdown"
+                      data-bs-auto-close="outside"
+                      aria-expanded="false"
+                    >
+                      <span class="material-icons"> more_vert </span>
+                    </button>
+                    <ul
+                      class="dropdown-menu"
+                      aria-labelledby="dropdownMenuClickableInside"
+                    >
+                      <li><a class="dropdown-item" href="#">Download</a></li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item">
+                          <div class="form-check ps-0 pe-4">
+                            <label class="form-check-label" for="invalidCheck">
+                              Set as Thumbnail
+                            </label>
+                            <input
+                              class="form-check-input float-end ms-auto"
+                              style="margin-right: -1.5rem"
+                              type="checkbox"
+                              value=""
+                              id="invalidCheck"
+                              required
+                            />
+                          </div>
+                        </a>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <button
+                          class="dropdown-item"
+                          data-bs-toggle="modal"
+                          data-bs-target="#deleteThisRow"
+                        >
+                          Delete
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
                 </td>
               </tr>
             </tbody>
