--- a/login.html
+++ b/login.html
@@ -41,11 +41,30 @@
         margin: 0 auto;
       }
 
-      .welcome-text{
+      .welcome-text {
         position: absolute;
         top: 25%;
         left: 0;
         width: 100%;
+      }
+
+      @media screen and (max-width: 1366px) {
+        .form-container {
+          top: 210px;
+          height: 402px;
+        }
+
+        .welcome-text{
+          top: 15%;
+        }
+      }
+
+      @media screen and (max-width: 996.67px){
+        .form-container{
+          height: 422px;
+          padding-left: 1rem;
+          padding-right: 1rem;
+        }
       }
     </style>
   </head>
@@ -61,8 +80,8 @@
 
     <div class="main">
       <div class="welcome-text text-white text-center">
-        <h1 style="font-size: 40px;">Welcome</h1>
-        <p style="font-size: 1.25rem;">Please login to access your account</p>
+        <h1 style="font-size: 40px">Welcome</h1>
+        <p style="font-size: 1.25rem">Please login to access your account</p>
       </div>
       <div class="top"></div>
       <div class="form-container">
@@ -105,7 +124,11 @@
                 Login
               </button>
               <div class="text-center mt-3">
-                <a href="./forget-password.html" class="text-info text-decoration-none fs-14">Forget Password?</a>
+                <a
+                  href="./forget-password.html"
+                  class="text-info text-decoration-none fs-14"
+                  >Forget Password?</a
+                >
               </div>
             </div>
           </div>
@@ -113,6 +136,5 @@
       </div>
     </div>
 
-    <footer></footer>
   </body>
 </html>
