--- a/password-changed.html
+++ b/password-changed.html
@@ -47,6 +47,25 @@
         left: 0;
         width: 100%;
       }
+
+      @media screen and (max-width: 1366px) {
+        .form-container {
+          top: 210px;
+          height: 402px;
+        }
+
+        .welcome-text{
+          top: 15%;
+        }
+      }
+
+      @media screen and (max-width: 996.67px){
+        .form-container{
+          height: 422px;
+          padding-left: 1rem;
+          padding-right: 1rem;
+        }
+      }
     </style>
   </head>
   <body class="100-vh">
@@ -82,6 +101,5 @@
       </div>
     </div>
 
-    <footer></footer>
   </body>
 </html>
