--- a/properties-default.html
+++ b/properties-default.html
@@ -16,10 +16,249 @@
     />
   </head>
   <body>
-    <header></header>
+    <header>
+      <a href="./index.html" class="brand-icon">
+        <img src="../assets/images/logo.svg" alt="" />
+      </a>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="toggle-menu">
+          <button class="btn fs-28 p-0" id="show-sidebar-btn">
+            <span class="material-icons">menu</span>
+          </button>
+          <a href="./index.html" class="toggle-brand-icon">
+            <img
+              src="./assets/images/logo.svg"
+              width="220px"
+              class="img-fluid"
+              alt=""
+            />
+          </a>
+        </div>
+        <nav class="main-nav">
+          <ul class="ps-0 mb-0 list-unstyled">
+            <li>
+              <a href="">
+                <span class="material-icons navbar-icon">people_alt</span>
+                <span class="navbar-label">Agents</span>
+              </a>
+            </li>
+            <li class="">
+              <a href="">
+                <span class="material-icons navbar-icon">dashboard</span>
+                <span class="navbar-label">Dashboard</span>
+              </a>
+            </li>
+            <li class="active">
+              <a href="">
+                <span class="material-icons navbar-icon">work</span>
+                <span class="navbar-label">Projects</span></a
+              >
+            </li>
+            <li>
+              <div class="btn-group">
+                <button
+                  class="btn fs-25 p-0 text-secondary"
+                  type="button"
+                  id="manualClose"
+                  data-bs-toggle="dropdown"
+                  data-bs-auto-close="false"
+                  aria-expanded="false"
+                >
+                  <span class="material-icons">notifications</span>
+                </button>
+                <div
+                  class="dropdown-menu notifications-container"
+                  aria-labelledby="manualClose"
+                >
+                  <div
+                    class="d-flex align-items-center justify-content-between"
+                  >
+                    <p class="mb-0 fs-15">Notifications</p>
+                    <button class="btn text-info fs-10">
+                      Mark all as read
+                    </button>
+                  </div>
+                  <hr />
+                  <ul class="list-unstyled">
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <div class="dropdown-divider"></div>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <div class="dropdown-divider"></div>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <div class="notification">
+                          <img
+                            src="./assets/images/icons/user-icon.png"
+                            width="44"
+                            height="44"
+                            alt=""
+                          />
+                          <div class="flex-fill mx-3">
+                            <p class="title">George Street</p>
+                            <p class="summary">
+                              <strong>John Doe</strong> changed the status of
+                              <strong>G1</strong> to <strong>Available</strong>
+                            </p>
+                            <p class="time">10 min ago</p>
+                          </div>
+                          <img
+                            src="./assets/images/icons/building.png"
+                            width="49"
+                            height="47"
+                            alt=""
+                          />
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="dropdown">
+                <button
+                  class="btn fs-25 p-0 text-secondary"
+                  type="button"
+                  id="dropdownMenuButton1"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <span class="material-icons">account_box</span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">My Profile</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
     <main>
-      <aside></aside>
+      <aside>
+        <div
+          class="
+            d-xl-none d-flex
+            align-items-center
+            justify-content-between
+            py-1
+            border-bottom
+          "
+        >
+          <h5 class="fs-28 text-primary">Menu</h5>
+          <button class="btn fs-28 p-0 text-primary" id="hide-sidebar-btn">
+            <span class="material-icons">arrow_back</span>
+          </button>
+        </div>
+        <ul class="list-unstyled mb-0 ps-0 sidebar-items">
+          <li>
+            <a href="" class="sidebar-item">
+              <span class="material-icons">widgets</span>
+              Matrix
+            </a>
+          </li>
+          <li class="active">
+            <a href="" class="sidebar-item">
+              <span class="material-icons">holiday_village</span>
+              Properties
+            </a>
+          </li>
+          <li>
+            <div class="dropdown">
+              <button class="sidebar-item">
+                <span class="material-icons">description</span>
+                Documents
+              </button>
+              <ul class="list-unstyled ps-0 mb-0 sidebar-dropdown-list">
+                <li>
+                  <a href="">Floor Plans</a>
+                </li>
+                <li>
+                  <a href="">Brochure</a>
+                </li>
+                <li class="active">
+                  <a href="">FloorPlates</a>
+                </li>
+                <li>
+                  <a href="">Images</a>
+                </li>
+                <li>
+                  <a href="">Fixtures & Finishes</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="" class="sidebar-item">
+              <span class="material-icons">video_library</span>
+              Videos
+            </a>
+          </li>
+          <li>
+            <a href="" class="sidebar-item">
+              <span class="material-icons">place</span>
+              Map
+            </a>
+          </li>
+        </ul>
+      </aside>
       <div class="content">
         <h1 class="mainUserText">George Street</h1>
         <p class="fs-20 mb-3">363 George Street, Fitzroy VIC</p>
@@ -71,53 +310,61 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div class="d-flex align-items-center justify-content-between">
-          <h5 class="fs-28 fw-normal mt-4 mb-3">
+        <div class="d-flex align-items-center justify-content-between flex-wrap">
+          <h5 class="fs-28 fw-normal mt-3">
             Properties
-            <span class="fs-18"> (0 properties) </span>
+            <span class="fs-18"> (0 Results) </span>
           </h5>
-          <div class="row g-3">
-            <div class="col-6">
-              <div class="position-relative">
-                <input
-                  type="text"
-                  class="form-control border border-dark rounded px-3"
-                  placeholder="Search"
-                />
-                <p
-                  class="fs-5 position-absolute mb-0 end-0 top-50"
-                  style="transform: translate(-50%, -50%)"
-                >
-                  <span class="material-icons"> search </span>
-                </p>
-              </div>
-            </div>
-            <div class="col-6">
-              <select
-                name=""
-                id=""
-                class="form-select border border-dark rounded px-3"
-              >
-                <option value="">Filter</option>
-              </select>
-            </div>
+          <div class="position-relative mt-3">
+            <input
+              type="text"
+              class="form-control border border-dark rounded px-3"
+              placeholder="Search"
+            />
+            <p
+              class="fs-5 position-absolute mb-0 end-0 top-50"
+              style="transform: translate(-50%, -50%)"
+            >
+              <span class="material-icons"> search </span>
+            </p>
+          </div>
+          <div class="d-flex align-items-center mt-3">
+            <button class="btn">Import</button>
+            <button class="btn text-nowrap">
+              Export
+              <span class="material-icons">more_vert</span>
+            </button>
+            <select
+              name=""
+              id=""
+              class="form-select border border-dark rounded px-3"
+              style="width: 125px"
+            >
+              <option value="">Filter</option>
+            </select>
           </div>
         </div>
-        <hr>
+        <hr />
         <div class="my-5">
-            <div class="text-center">
-              <img src="./assets/images/icons/import-file-icon.png" class="mb-4" width="48" height="48" alt="">
-              <h5 class="fs-25 mb-2 opacity-50">No Properties available</h5>
-              <p class="mb-3 opacity-50">
-                Your project doesn’t have any properties yet.
-                <br>
-                Import the file today.
-              </p>
-              <button class="btn btn-lg btn-primary">
-                <span class="material-icons">upload</span>
-                Import File
-              </button>
-            </div>
+          <div class="text-center">
+            <img
+              src="./assets/images/icons/import-file-icon.png"
+              class="mb-4"
+              width="48"
+              height="48"
+              alt=""
+            />
+            <h5 class="fs-25 mb-2 opacity-50">No Properties available</h5>
+            <p class="mb-3 opacity-50">
+              Your project doesn’t have any properties yet.
+              <br />
+              Import the file today.
+            </p>
+            <button class="btn btn-lg btn-primary">
+              <span class="material-icons">upload</span>
+              Import File
+            </button>
+          </div>
         </div>
       </div>
     </main>
