--- a/reset-password.html
+++ b/reset-password.html
@@ -41,11 +41,30 @@
         margin: 0 auto;
       }
 
-      .welcome-text{
+      .welcome-text {
         position: absolute;
         top: 25%;
         left: 0;
         width: 100%;
+      }
+
+      @media screen and (max-width: 1366px) {
+        .form-container {
+          top: 210px;
+          height: 402px;
+        }
+
+        .welcome-text{
+          top: 15%;
+        }
+      }
+
+      @media screen and (max-width: 996.67px){
+        .form-container{
+          height: 422px;
+          padding-left: 1rem;
+          padding-right: 1rem;
+        }
       }
     </style>
   </head>
@@ -101,6 +120,5 @@
       </div>
     </div>
 
-    <footer></footer>
   </body>
 </html>
